# add_executable( chainbase_test "chainbase_test.cpp" )
# target_link_libraries( chainbase_test chainbase Boost::unit_test_framework ${OPENSSL_LIBRARIES} ${PLATFORM_SPECIFIC_LIBS} )

# add_executable( chainrocks_test "chainrocks_test.cpp" )
# target_link_libraries( chainrocks_test chainrocks Boost::unit_test_framework ${OPENSSL_LIBRARIES} ${PLATFORM_SPECIFIC_LIBS} )
